...
  "titleMovingEntry": "Moving entry",
  "@titleMovingEntry": {},
  "titleSaveEntriesToDevice":"Save to device",
  "@titleSaveEntriesToDevice":{
    "description": "Title for the confirmation dialog when saving entries to device"
  },
  "titleDeleteEntries":"Delete",
  "@titleDeleteEntries":{
    "description": "Title for the confirmation dialog when deleting entries"
  },
  "titleLanAccessDenied":"Local network access is not allowed",
  "typeFolder": "Folder",
  "@typeFolder": {},
...
  "messageGranted":"Granted",
  "messagePermissionRequired": "This permission is required",
  "messageGrantingRequiresSettings":"Granting this permission requires navigating to the settings:\n\n Settings > Apps & notifications",
  "messageCameraPermission":"We need this permission to use the camera and read the QR code",
  "messageIgnoreBatteryOptimizationsPermission":"Allows the app to keep syncing in the background",
  "messageStoragePermission":"Needed for getting access to the files",
  "messageStorage":"Storage",
  "messageCamera":"Camera",
  "messageFileAlreadyExist":"{name} already exist in this location.\n\nWhat do you want to do?",
  "messageReplaceExistingFile":"Replace existing file",
  "messageReplaceExistingFolder":"Replace existing folder",
  "messageKeepBothFiles":"Keep both files",
  "messageKeepBothFolders":"Keep both folders",
...
  "iconDownload": "Download",
  "@iconDownload": {},
  "iconPreview": "Preview",
  "@iconPreview": {},
  "iconShare": "Share",
  "@iconShare": {},
  "iconRename": "Rename",
  "@iconRename": {},
  "iconMove": "Move",
  "@iconMove": {},
  "iconDelete": "Delete",
  "@iconDelete": {},
  "iconCreateRepository": "Create a new repository",
...
  "actionAcceptCapital": "ACCEPT",
  "@actionAcceptCapital": {},
  "actionCancelCapital": "CANCEL",
  "@actionCancelCapital": {},
  "actionHideCapital": "HIDE",
  "@actionHideCapital": {},
  "actionCloseCapital": "CLOSE",
  "@actionCloseCapital": {},
  "actionDeleteCapital": "DELETE",
  "@actionDeleteCapital": {},
  "actionLockCapital": "LOCK",
  "@actionLockCapital": {},
  "actionRemove":"Remove",
  "actionDiscard":"Discard",
  "actionClear":"Clear",
...
