...
              ElevatedButton(
                onPressed: () {
                  if (_createRepoFormKey.currentState!.validate()) {
                    _createRepoFormKey.currentState!.save();
                  }
                },
                child: const Text('CREATE'),
              ),
              SizedBox(width: 40.0,),
              ElevatedButton(
                onPressed: () {
                  Navigator.of(context).pop(false);
                },
...
