...
            emptyError: S.current.messageErrorFormValidatorNameDefault,
            regExp: Strings.entityNameRegExp,
            regExpError: S.current.messageErrorCharactersNotAllowed,
          ),
          focusNode: newNameFocus,
          autofocus: true,
          key: ValueKey('new-name'),
        ),
        Fields.dialogActions(buttons: buildActions()),
      ],
    ),
  );

...
